Feat:Configuration based on the backend end points
